// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Is required 1`] = `
Array [
  .c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
  background-position: right 0.75rem center;
  background-repeat: no-repeat;
  background-size: 0.75rem;
  position: relative;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      Choose your province or territory
    </label>
    <select
      className="c2"
      onChange={[Function]}
      required={true}
    >
      <option
        value=""
      >
        -
      </option>
      <option
        value="on"
      >
        Ontario
      </option>
      <option
        value="qc"
      >
        Quebec
      </option>
      <option
        value="bc"
      >
        British Columbia
      </option>
      <option
        value="ab"
      >
        Alberta
      </option>
      <option
        value="mb"
      >
        Manitoba
      </option>
      <option
        value="sk"
      >
        Saskatchewan
      </option>
      <option
        value="ns"
      >
        Nova Scotia
      </option>
      <option
        value="nb"
      >
        New Brunswick
      </option>
      <option
        value="nl"
      >
        Newfoundland and Labrador
      </option>
      <option
        value="pe"
      >
        Prince Edward Island
      </option>
      <option
        value="nt"
      >
        Northwest Territories
      </option>
      <option
        value="nu"
      >
        Nunavut
      </option>
      <option
        value="yt"
      >
        Yukon
      </option>
    </select>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;

exports[`Select Matches the snapshot 1`] = `
Array [
  .c1 {
  color: #000000;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
  margin: 0;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #D9DDE2;
}

.c0:focus {
  border-color: #0080A5;
}

.c2 {
  background: #FFFFFF;
  border: 1px solid #D9DDE2;
  border-radius: var(--border-radius);
  box-shadow: none;
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1.4rem;
  margin: 0;
  outline: none;
  padding: var(--spacing-half) var(--spacing-1x);
  width: 100%;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='currentColor' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-chevron-down'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
  background-position: right 0.75rem center;
  background-repeat: no-repeat;
  background-size: 0.75rem;
  position: relative;
}

.c2::-webkit-input-placeholder {
  color: #57666E;
}

.c2::-moz-placeholder {
  color: #57666E;
}

.c2:-ms-input-placeholder {
  color: #57666E;
}

.c2::placeholder {
  color: #57666E;
}

.c2:disabled {
  background-color: #F1F2F2;
  border-color: #D9DDE2;
}

.c2:disabled,
.c2:disabled::-webkit-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::-moz-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled:-ms-input-placeholder {
  color: #9CA7B4;
}

.c2:disabled,
.c2:disabled::placeholder {
  color: #9CA7B4;
}

.c2:focus {
  border-color: #0080A5;
}

label + .c2 {
  display: block;
  margin-top: var(--spacing-half);
}

<div
    className="c0"
  >
    <label
      className="c1"
    >
      Choose your province or territory
    </label>
    <select
      className="c2"
      onChange={[Function]}
    >
      <option
        value=""
      >
        -
      </option>
      <option
        value="on"
      >
        Ontario
      </option>
      <option
        value="qc"
      >
        Quebec
      </option>
      <option
        value="bc"
      >
        British Columbia
      </option>
      <option
        value="ab"
      >
        Alberta
      </option>
      <option
        value="mb"
      >
        Manitoba
      </option>
      <option
        value="sk"
      >
        Saskatchewan
      </option>
      <option
        value="ns"
      >
        Nova Scotia
      </option>
      <option
        value="nb"
      >
        New Brunswick
      </option>
      <option
        value="nl"
      >
        Newfoundland and Labrador
      </option>
      <option
        value="pe"
      >
        Prince Edward Island
      </option>
      <option
        value="nt"
      >
        Northwest Territories
      </option>
      <option
        value="nu"
      >
        Nunavut
      </option>
      <option
        value="yt"
      >
        Yukon
      </option>
    </select>
  </div>,
  .c0 {
  border: 0 !important;
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px !important;
  overflow: hidden;
  padding: 0 !important;
  position: absolute !important;
  width: 1px !important;
}

<input
    checked={false}
    className="c0"
    name="undefined_skip"
    onChange={[Function]}
    type="radio"
    value="skip"
  />,
  .c0 {
  --border-radius: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #FFFFFF;
  border: 1px solid #57666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #57666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 1.5rem;
  min-height: 3rem;
  padding: var(--spacing-1x);
  text-align: center;
  -webkit-transition: all 0.25s ease-in-out;
  transition: all 0.25s ease-in-out;
}

.c0:hover {
  background: #D9DDE2;
  border-color: #D9DDE2;
}

input[type="checkbox"]:checked + .c0,
input[type="radio"]:checked + .c0 {
  background: #0080A5;
  border-color: #0080A5;
  color: #FFFFFF;
}

input[type="checkbox"]:focus + .c0,
input[type="radio"]:focus + .c0 {
  border-color: #0080A5;
}

input[type="checkbox"]:disabled + .c0,
input[type="radio"]:disabled + .c0 {
  background: #F1F2F2;
  border-color: #D9DDE2;
  color: #9CA7B4;
  cursor: auto;
}

.c0 b {
  font-size: 1.5rem;
  font-weight: var(--font-normal);
  line-height: 2.5rem;
}

.c0 svg {
  color: inherit;
  height: 3rem;
  width: 3rem;
}

<label
    className="c0"
  >
    Skip this question
  </label>,
]
`;
